# Adidas_Hackathon_Amsterdam_2018

./: .env.dist  .gitignore  README.md  requirements.txt
api-gateway/: Dockerfile  package-lock.json  package.json
api-gateway/config/: gateway.config.yml  system.config.yml
blockchain/: interfaceBC.py  main.py  privateBlockChain.py
infrastructure/: api-gateway.tf  apis.tf  main.tf  product-api.tf  product-db.tf  product-record-api.tf  variables.tf
product-api/: .env.dist  .gitignore  Dockerfile  behat.yml.dist  composer.json  docker-compose.yaml
product-api/config/: bundles.php  services.yaml
product-api/docker/php-asl/: 000-default.conf  docker-entrypoint.sh
product-api/features/: products.feature  security.feature
product-api/features/bootstrap/: EntityContext.php  FeatureContext.php  JsonContext.php  SecurityContext.php
product-api/features/resources/jwt/: private.pem  public.pem
product-api/src/Annotation/: OwnerAware.php
product-api/src/DataFixtures/: AppFixtures.php
product-api/src/Entity/: Product.php
product-api/src/EventListener/: OwnerAwareListener.php  OwnerFilterConfigurator.php
product-api/src/Filter/: OwnerFilter.php
product-api/src/Model/: OwnerAwareInterface.php
product-api/src/Security/: User.php
product-record-api/: Dockerfile  product_records_api.py  requirements.txt
product-record-api/blockchain/: interface_blockchain.py  private_blockchain.py
product_api/: __init__.py  api_addBlockchain.py  api_getPrductHistory.py  setup.cfg
row_data/: productData_1.csv
scripts/: deploy-from-local.sh
