[metadata]
name = dummy
author = Vasudev Kamath
author-email = kamathvasudev@gmail.com
summary = Dummy module for testing purpose
version = 0.1
license = MIT
description-file =
  README.rst
requires-python = >= 2.7

[files]
packages =
  dummy

[entry_points] =
myapp.api.rest =
  rest = dummy:expose_rest_func